fix picture size

--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -561,6 +561,7 @@ textarea {
 	-o-transition: all 0.3s ease-in-out;
 	-ms-transition: all 0.3s ease-in-out;
 	transition: all 0.3s ease-in-out;
+	margin-top: 3%;
 }
 .site-name a {
 	color: #ffffff;
